--- a/index.html
+++ b/index.html
@@ -609,10 +609,11 @@
                 eating well today. You can cancel or pause anytime. And the
                 first meal is on us!
               </p>
-              <form action="#" class="cta-form">
+              <form name="sign-up" netlify class="cta-form">
                 <div>
                   <label for="full-name">Full name</label>
                   <input
+                    name="full-name"
                     type="text"
                     id="full-name"
                     placeholder="Nhan Phan"
@@ -624,6 +625,7 @@
                 <div>
                   <label for="email">Email address</label>
                   <input
+                    name="email"
                     type="email"
                     id="email"
                     placeholder="me@example.com"
@@ -634,7 +636,7 @@
 
                 <div>
                   <label for="select-where">Where did you hear from us?</label>
-                  <select name="" id="select-where" required>
+                  <select name="select-where" id="select-where" required>
                     <option value="">Please choose one option:</option>
                     <option value="friends">Friends and family</option>
                     <option value="youtube">Youtube video</option>
